Implement basic structure of login
