# config/routes.rb
@@ -1,4 +1,5 @@
 Rails.application.routes.draw do
+  post '/login', to: 'authentication#login', defaults: { format: 'json' }
   post '/users', to: 'users#create', defaults: { format: 'json' }
 
   resources :random_thoughts, defaults: { format: 'json' }
