# swagger/v1/swagger.yaml
@@ -4,6 +4,40 @@ info:
   title: API V1
   version: v1
 paths:
+  "/login":
+    post:
+      summary: login
+      parameters: []
+      responses:
+        '200':
+          description: logged in
+          content:
+            application/json:
+              examples:
+                successful_login:
+                  value:
+                    status: 200
+                    message: Successfully logged in user
+                    token: xxxxxxxx.xxxxxxxxxx.xxxxxx
+              schema:
+                "$ref": "#/components/schemas/login_response"
+        '401':
+          description: unauthorized
+          content:
+            application/json:
+              examples:
+                unauthorized:
+                  value:
+                    status: 401
+                    error: unauthorized
+                    message: Invalid login
+              schema:
+                "$ref": "#/components/schemas/error"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              "$ref": "#/components/schemas/login"
   "/random_thoughts":
     get:
       summary: list random_thoughts
@@ -337,6 +371,31 @@ components:
       - id
       - email
       - display_name
+    login_credentials:
+      type: object
+      properties:
+        email:
+          type: string
+        password:
+          type: string
+      required:
+      - email
+      - password
+    login:
+      type: object
+      properties:
+        authentication:
+          "$ref": "#/components/schemas/login_credentials"
+    login_response:
+      type: object
+      properties:
+        message:
+          type: string
+        token:
+          type: string
+      required:
+      - message
+      - token
     pagination:
       type: object
       properties:
